extracted `jcog/tensor` module from `jcog/learn`